Fixed clipping issues with the navbar

--- a/Code/src/css/navbar.css
+++ b/Code/src/css/navbar.css
@@ -9,6 +9,7 @@
     padding: 15px;
     align-items: center;
     justify-content: space-around;
+    z-index: 99;
 }
 
 .logo {
